# python_plus_plus

./: .gitignore  Cargo.toml  Readme.md  artifacts.json  changelog.rss  example.py  index.html  oranda.json  python_plus_plus-installer.ps1.txt  python_plus_plus-installer.sh.txt
.github/workflows/: release.yml
artifacts/: index.html
changelog/: index.html
changelog/v0.0.11/: index.html
changelog/v0.0.12/: index.html
changelog/v0.0.2/: index.html
changelog/v0.0.4/: index.html
changelog/v0.0.5/: index.html
changelog/v0.0.6/: index.html
src/: main.rs
wix/: main.wxs
